--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
     background-color: #202124;
     color: white;
 }
+.app_body{
+    display: flex;
+    height: 100vh;
+}
+.app_body .MuiSvgIcon-root{
+   margin: 0;
+   padding: 0;
+}
